--- a/style.css
+++ b/style.css
@@ -1,1 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+.newspaper-container{
+    width:700px;
+    border-radius:100%;
+    box-shadow:#ddd;
+    padding:1em;
+}
+.date h1{
+    text-align:justify;
+    font:abril fatface;
+}
+li{
+    list-style:none;
+    display:inline-block;
+    padding:2em;
+    
+}
+p{
+    display:inline-block;
+    text-align:justify;
+    font:#dd3232;
+}
+body{
+    background-color:#eee;
+    border:#eee;
+}
+nav{
+    color:#777;
+    border-top: 1.5em;
+    border-bottom: 1.5em;
+}
+
